RT - Added missing dynamic rule for iso5000

--- a/RawTherapee/dynamicprofile.cfg
+++ b/RawTherapee/dynamicprofile.cfg
@@ -321,6 +321,25 @@ imagetype_enabled=false
 imagetype_value=
 profilepath=${U}/iso4000
 
+[rule 17]
+iso_min=5000
+iso_max=5000
+fnumber_min=0
+fnumber_max=100
+focallen_min=0
+focallen_max=10000
+shutterspeed_min=0
+shutterspeed_max=1000
+expcomp_min=-20
+expcomp_max=20
+camera_enabled=true
+camera_value=SONY DSC-RX100M3
+lens_enabled=false
+lens_value=
+imagetype_enabled=false
+imagetype_value=
+profilepath=${U}/iso5000
+
 [rule 18]
 iso_min=6400
 iso_max=6400
